<resources>
    <string name="app_name">InventoryApp</string>

    <string name="add">add product</string>
    <string name="action_delete_all_entries">Delete all products</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="empty_view_title_text">You don\'t have any product yet!</string>
    <string name="no_quantity">This product is out of stock</string>
    <string name="not_provided">Not provided!</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplierPhone">Phone</string>
    <string name="supplierEmail">Email</string>
    <string name="supplierInfo">Supplier Info:</string>
    <string name="done">done</string>
    <string name="titleRquired">Product title is required to add new product!</string>
    <string name="priceRquired">Product price is required to add new product!</string>
    <string name="quantityRquired">Product quantity is required to add new product!</string>
    <string name="insert_product_successful">Product saved</string>
    <string name="insert_product_failed">Error with saving product</string>
    <string name="edit_product_successful">Product saved</string>
    <string name="edit_product_failed">Error with saving product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit?</string>
    <string name="discard_new_dialog_msg">Discard adding new product and quit?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="stay">Stay here</string>
    <string name="peace_s">PC/s</string>
    <string name="free">Free</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete_all_dialog_msg">Delete all products?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="product_details_title">Product Details</string>
    <string name="product_edit_title">Edit Product</string>
    <string name="delete_product_successful">Product deleted</string>
    <string name="delete_product_failed">Error with deleting product</string>
    <string name="add_new">Add new product</string>
    <string name="receive">receipt confirmation</string>
    <string name="sale">sale</string>
    <string name="sold">Sold</string>
    <string name="mail">email@mail.com</string>
    <string name="phone">9111111</string>
</resources>
