<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/feImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"/>

        <EditText
            android:id="@+id/feTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:gravity="center"
            android:inputType="text"
            android:hint="@string/title"/>

        <EditText
            android:id="@+id/fePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:hint="@string/price"/>

        <EditText
            android:id="@+id/feQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/quantity"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_margin="@dimen/dp5"
            android:text="@string/supplierInfo"/>

        <EditText
            android:id="@+id/feEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:ems="1"
            android:hint="@string/supplierEmail"/>

        <EditText
            android:id="@+id/fePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:gravity="center"
            android:ems="1"
            android:hint="@string/supplierPhone"/>
    </LinearLayout>
</ScrollView>