<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".NewProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/productImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_no_image"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"/>

        <EditText
            android:id="@+id/edtTxtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:inputType="text"
            android:hint="@string/title"/>

        <EditText
            android:id="@+id/edtTxtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:inputType="numberDecimal"
            android:hint="@string/price"/>

        <EditText
            android:id="@+id/edtTxtQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:inputType="number"
            android:hint="@string/quantity"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/supplierInfo"
                android:gravity="center"
                android:layout_marginRight="@dimen/dp5"
                android:layout_marginEnd="@dimen/dp5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtTxtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="1"
                    android:hint="@string/supplierPhone"/>

                <EditText
                    android:id="@+id/edtTxtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="1"
                    android:hint="@string/supplierEmail"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>