<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fdImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/fdTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginTop="@dimen/dp5"
            android:layout_marginBottom="@dimen/dp5"
            android:textStyle="bold"
            tools:text="Title" />

        <TextView
            android:id="@+id/fdPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp5"
            android:layout_marginBottom="@dimen/dp5"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            tools:text="Price" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fdBtnReceive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/dp5"
                android:text="@string/receive"/>

            <Button
                android:id="@+id/fdBtnSale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/dp5"
                android:text="@string/sale"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fdTxtQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_margin="@dimen/dp5"
                android:text="@string/quantity"/>

            <TextView
                android:id="@+id/fdtTxtSold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_margin="@dimen/dp5"
                android:text="@string/sold"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_margin="@dimen/dp5"
            android:text="@string/supplierInfo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_margin="@dimen/dp5"
                android:text="@string/supplierEmail"/>

            <TextView
                android:id="@+id/fdEmailClick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                android:layout_margin="@dimen/dp5"
                android:text="@string/mail"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_margin="@dimen/dp5"
                android:text="@string/supplierPhone"/>

            <TextView
                android:id="@+id/fdPhoneClick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_margin="@dimen/dp5"
                android:textColor="@android:color/white"
                android:text="@string/phone"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>